--- a/.github/workflows/buildPages.yml
+++ b/.github/workflows/buildPages.yml
@@ -1,24 +1,32 @@
 name: Build and deploy
 
-on: [push]
+on:
+  push:
+    branches:
+      - master  # define explicitamente a branch correta
 
 permissions:
   contents: read
   pages: write
   id-token: write
 
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v4
-      - name: Install pnpm 📥
+      - name: Checkout repository 📥
+        uses: actions/checkout@v4
+
+      - name: Setup pnpm 📥
         uses: pnpm/action-setup@v4
         with:
           version: 9
 
-      - name: Install Node.js 📥
+      - name: Setup Node.js 📥
         uses: actions/setup-node@v4
         with:
           node-version: 20
@@ -27,26 +35,21 @@ jobs:
       - name: Install dependencies 📥
         run: pnpm install
 
-      - name: Build plugins 🛠️
+      - name: Build project 🛠️
         run: pnpm run build
 
-      - name: Upload artifact 📡
+      - name: Upload GitHub Pages artifact 📡
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./dist
 
   deploy:
-    if: github.ref == 'refs/heads/master'
-
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-
     runs-on: ubuntu-latest
     needs: build
-
     steps:
-      - name: Publish to GitHub Pages 🚀
+      - name: Deploy to GitHub Pages 🚀
         id: deployment
         uses: actions/deploy-pages@v4
-
